--- a/geonode/static/js/upload/upload.html
+++ b/geonode/static/js/upload/upload.html
@@ -12,10 +12,12 @@
 
 <script type='text/html' id='layerTemplate'>
   <div class='file-element' id='<%= name %>-element'>
+    <div class='row'>
+      <div class='span4'><h3><%= name %></h3></div>
+      <div class='span2'><h3><%= type %><h3></div>
+    </div>
+    <hr />
     <div>
-
-      <div><h3><%= name %></h3></div>
-      <div><p><%= type %></p></div>
       <ul class='files'></ul>
       <ul class='errors'></ul>
       <div id='status'></div>
