--- a/geonode/static/tests/test.html
+++ b/geonode/static/tests/test.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Layer Uploader tests</title>
-  <link rel="stylesheet" href="qunit.css">
+
+  <link rel="stylesheet" type="text/css" href="./jasmine.css">
+  <script type="text/javascript" src="./jasmine.js"></script>
+  <script type="text/javascript" src="./jasmine-html.js"></script>
+
 </head>
 <body>
-  <div id="qunit"></div>
-  <script src="/static/underscore-min.js"></script>
-  <script src="/static/jquery-1.8.0.js"></script>
-  <script src="qunit.js"></script>
-  <script src="layer_upload.js"></script>
-  <script src="test.js"></script>
+  <script data-main="test" src="/static/libs/require-jquery.js"></script>
+
 </body>
 </html>
